[package]
name = "purgo"
version = "0.1.0"
edition = "2021"
description = "Clean up your filesystem! It's like a spell, you cast purgo and it just works."
authors = ["Kauê Fraga Rodrigues <rkauefraga+purgo@gmail.com>"]
license = "MIT"
repository = "https://github.com/kauefraga/purgo"

[dependencies]
clap = { version = "4.5.4", features = ["cargo"] }
colorized = "1.0.0"
inquire = "0.7.5"
size = "0.4.1"
walkdir = "2.5.0"
